<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black"
        android:text="@string/txtHeader"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        />

    <EditText
        android:id="@+id/edtProductNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtHeader"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/edtProductNumber"
        android:textColorHint="@color/grey"
        android:layout_margin="15dp"
        android:padding="7dp"
        android:background="@drawable/edittextdesign"
        android:textColor="@color/black"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtProductNumber"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/edtProductTitle"
        android:textColorHint="@color/grey"
        android:layout_margin="15dp"
        android:padding="7dp"
        android:background="@drawable/edittextdesign"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edtStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/edtProductStock"
        android:textColorHint="@color/grey"
        android:layout_margin="15dp"
        android:padding="7dp"
        android:background="@drawable/edittextdesign"
        android:textColor="@color/black"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtStock"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/edtProductDescription"
        android:textColorHint="@color/grey"
        android:layout_margin="15dp"
        android:padding="7dp"
        android:background="@drawable/edittextdesign"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_500"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtDescription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="15sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>